# duplex-server-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.devcontainer/: devcontainer.json
.sqlx/: query-aca3d58874299ee1a5dc31eac81e0a71f20f8deb186d80ddec1c24494c689a79.json  query-c0e58360037da19b6c295a0e9b3ce4230aa2ede213a9125e956e66d1ec00c3c7.json  query-d4b5a8838a554bb7aa0817ea13fef6718c8e33e4a0d1d3c1d3f759b582c009c6.json
migrations/: 20240802165529_create_users_table.sql  20240802165529_create_users_table.up.sql  20240802165536_create_events_table.sql
proto/: users.proto
src/: commands.rs  controllers.rs  db.rs  domain.rs  events.rs  handlers.rs  lib.rs  main.rs  models.rs  repositories.rs  services.rs
src/application/commands/: mod.rs  user_commands.rs
src/application/services/: user_service.rs
src/domain/: mod.rs
src/domain/events/: mod.rs
src/domain/models/: mod.rs  user_model.rs
src/domain/repositories/: mod.rs  user_repository.rs
src/infrastructure/: listener.rs  mod.rs
src/infrastructure/db/: mod.rs  pgpool.rs
src/infrastructure/grpc/: mod.rs  services.rs  users.rs
src/infrastructure/http/: mod.rs  router.rs  routes.rs
src/infrastructure/http/controllers/: mod.rs  user_controller.rs
src/infrastructure/logger/: mod.rs
src/infrastructure/persistence/: postgres.rs
src/infrastructure/proto/: users.rs
src/infrastructure/repositories/: mod.rs  postgres.rs
