[package]
name = "coqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7.5"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "macros", "uuid","runtime-tokio"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1" , features = ["serde", "v7"]}
