[package]
name = "coqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "^0.7.5"
derive-new = "0.6.0"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
hyper = { version = "1.4.1", features = ["full"] }
nutype = { version = "0.4.3", features = ["regex", "serde"] }
prost = "0.13.1"
prost-derive = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "macros", "uuid","runtime-tokio"]}
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
tonic-reflection = "0.12.1"
tonic-web = "0.12.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1" , features = ["serde", "v7"]}

[build-dependencies]
regex = "1.10.5"
glob = "0.3.1"
tonic-build = "0.12.1"
